MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/6.mpl

data Unit -> C =
    Unit :: -> C

fun n6 :: A -> B =
    a -> 
        let fun f = 
                b -> a
        in f(a)
